test/corpus/directive.test
==========
Basic directive
==========
.text
---
(program
  (directive
    (control_mnemonic)))

==========
Directive with decimal
==========
.word 123
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal))))

==========
Directive with multiple space-separated decimals
==========
.word 1 2 3
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal))))

==========
Directive with integer values over multiple lines
==========
mat_A: .word 1 02 '3'
             2 01 '2'
             3 02 '1'
---
(program
  (label)
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (octal)
      (char)
      (decimal)
      (octal)
      (char)
      (decimal)
      (octal)
      (char))))

==========
Directive with multiple comma-separated decimals
==========
.word 1, 2, 3
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal))))

==========
Directive with multiple decimals and trailing space
==========
.word 1 2 3 
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal))))

==========
Directive with octal
==========
.word 012
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (octal))))

==========
Directive with hexadecimal
==========
.word 0x01abCD
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (hexadecimal))))

==========
Directive with char
==========
.word 'a'
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (char))))

==========
Directive with float
==========
.float 0.213
---
(program
  (directive
    (float_mnemonic)
    (float_operands
      (float))))

==========
Directive with string
==========
.asciiz "123"
---
(program
  (directive
    (string_mnemonic)
    (string)))

==========
Directive with string containing escaped characters
==========
.asciiz "12\n34\"56"
---
(program
  (directive
    (string_mnemonic)
    (string)))

==========
Directive with multiple arguments
==========
.set test "test" 123
---
(program
  (directive
    (control_mnemonic)
    (control_operands
      (symbol)
      (string)
      (decimal))))

==========
Directive with multiple comma-separated arguments
==========
.set test,"test",123
---
(program
  (directive
    (control_mnemonic)
    (control_operands
      (symbol)
      (string)
      (decimal))))
