test/corpus/directives/assignment.test
==========
[directives/assignment] assignment with decimal
==========
.foo bar=123
---

(program
  (directive
    (control_mnemonic)
    (control_operands
      (binary_expression
        (symbol)
        (decimal)))))

==========
[directives/assignment] assignment with char
==========
.foo bar='a'
---

(program
  (directive
    (control_mnemonic)
    (control_operands
      (binary_expression
        (symbol)
        (char)))))

==========
[directives/assignment] multiple assignments
==========
.foo bar=1 baz=2
---

(program
  (directive
    (control_mnemonic)
    (control_operands
      (binary_expression
        (symbol)
        (decimal))
      (binary_expression
        (symbol)
        (decimal)))))

==========
[directives/assignment] assignment with spaces around equals
==========
.foo bar = 1
---

(program
  (directive
    (control_mnemonic)
    (control_operands
      (binary_expression
        (symbol)
        (decimal)))))

==========
[directives/assignment] assignment with tabs around equals
==========
.foo bar	=	1
---

(program
  (directive
    (control_mnemonic)
    (control_operands
      (binary_expression
        (symbol)
        (decimal)))))
