test/corpus/directives/control.test
==========
[directives/control] basic control directive
==========
.text
---

(program
  (directive
    mnemonic: (control_mnemonic)))


==========
[directives/control] control statement with argument followed by underscore prefixed label
==========
.foo bar
_baz:
---

(program
  (directive
    mnemonic: (control_mnemonic)
    operands: (control_operands
      (symbol)))
  (global_label))

==========
[directives/control] control statement with argument followed by numeric label
==========
.foo bar
1:
---

(program
  (directive
    mnemonic: (control_mnemonic)
    operands: (control_operands
      (symbol)))
  (local_numeric_label))
