test/corpus/directives/integer.test
==========
[directives/integer] integer directive with decimal
==========
.word 123
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal))))

==========
[directives/integer] integer directive with octal
==========
.word 012
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (octal))))

==========
[directives/integer] integer directive with hexadecimal
==========
.word 0x01abCD
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (hexadecimal))))

==========
[directives/integer] integer directive with char
==========
.word 'a'
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (char))))

==========
[directives/integer] integer directive with multiple space-separated decimals
==========
.word 1 2 3
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal))))

==========
[directives/integer] directive with multiple comma-separated decimals
==========
.word 1, 2, 3
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal))))

==========
[directives/integer] directive with multiple decimals and trailing space
==========
.word 1 2 3 
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal))))

==========
[directives/integer] directive with multiple decimals and trailing tab
==========
.word 1 2 3	
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal))))

==========
[directives/integer] directive with integer values over multiple lines
==========
.word 1 2
      3 4
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal)
      (decimal))))

==========
[directives/integer] integer directive over multiple lines with trailing spaces
==========
.word 1 2 
      3 4 
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal)
      (decimal))))

==========
[directives/integer] integer directive over multiple lines with trailing tabs
==========
.word 1 2	
      3 4	
---
(program
  (directive
    (integer_mnemonic)
    (integer_operands
      (decimal)
      (decimal)
      (decimal)
      (decimal))))
